# cscale-gpet-workshop

./: .gitignore  Makefile  README.md  pytest.ini  setup.cfg
.github/workflows/: test_coverage.yml  test_platforms.yml
scripts/: profile-cpu-example-gauss-blur.sh  profile-cpu-example-mmean.sh  profile-gpu-example-gauss-blur.sh  run-example-gauss-blur.sh  run-example-gauss-blurr.sh  run-example-mmean.sh  run-example-resample.sh
src/cscale_gpet_workshop/: __init__.py  gaussian_blur.py  gaussian_blurr.py  main.py  mmean.py  mmean_pipeline.py  resample.py
src/cscale_gpet_workshop/cpu/: gaussian_blur.py  gaussian_blurr.py  mmean.py  resample.py
src/cscale_gpet_workshop/cpu/streams/: mean_stream.py
src/cscale_gpet_workshop/cuda/: gaussian_blur.py  gaussian_blurr.py  mmean.py
src/cscale_gpet_workshop/cuda/streams/: mean_stream.py
src/cscale_gpet_workshop/streams/: mean_stream.py
tests/: conftest.py  test_approve_gauss_blurr.py  test_approve_monthly_means.py  test_approve_resampling.py
