[metadata]
name = cscale_gpet_workshop
version = attr: cscale_gpet_workshop.__version__
description = Source code of C-Scale workshop about performance improvement using CUDA
author = TU Wien GEO MRS group
author_email = remote.sensing@geo.tuwien.ac.at
long_description = file: README.md
platforms = any
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
install_requires =
    eotransform
    eotransform-pandas
    xarray
    zarr
    equi7grid
    geopathfinder
    pyresample
    numba

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    approvaltests
    pytest-approvaltests-geo>=1.8.0

[options.entry_points]
console_scripts =
    resample-stl1 = cscale_gpet_workshop.resample:main